# agentedefutbol

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: ci.yml
src/: main.py
src/agents/: __init__.py  football_agent.py  nodes.py  prompts.py  tools.py
src/api/v1/: chat.py
src/core/: config.py  logging.py
src/models/: schemas.py
src/services/football_info_service/: __init__.py  config.py  exceptions.py  models.py  service.py
src/services/football_info_service/cache/: __init__.py  memory_cache.py
src/services/football_info_service/resolvers/: __init__.py  league_resolver.py  resolver.py  team_resolver.py
src/services/football_info_service/source_client/: __init__.py  connection_pool.py  mongodb_client.py
tests/: conftest.py
tests/unit/api/v1/: test_chat.py
